# SimpleBot

./: .gitignore  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.am  Makefile.in  Vorgehen_Deutscher_Chatbot.odt
man/: Makefile  Makefile.in  hello.1
script/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  TAGS  common.h  simplebot  simplebot.c
src/.deps/: exp1.tab.Po  hello.Po  lex.yy.Po  simplebot.Po
src/grammatik/: Makefile  exp1  exp1.dot  exp1.output  exp1.tab.c  exp1.tab.h  exp1.y  lex.yy.c  lex.yy.h  lexp1.l
src/logic/: Makefile  ch-7.pro  ch5-6.pro  ch9.pro  datumserkennung.pro  dcg_deutsch.pro  efficient_tokenizer.pro  ex4.5.pro  iftest  is-a-demo.pl  is-a-demo.pro  kb1.plg  kb1.pro  pl_if_test.c  pl_if_test.h  tokenizer.pro
